tests/errors/sem_call19.java
public class sem_call19 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(i , i , i);
}
}